# fifth_robot_pkg

./: .gitignore  .gitmodules  LICENCE  LICENSE.txt  README.md  TopBoard.ipt  fig_circuit  fig_power_supply_connection.txt  mybag.bag
maps/factory/oshimizu-park_1st/: oshimizu-park1.yaml
maps/factory/oshimizu-park_2nd/: oshimizu-park2.yaml
maps/factory/oshimizu-park_test/: oshimizu-park_test.yaml
opencv_watcher/: CMakeLists.txt  package.xml
opencv_watcher/src/: opencv_watcher.cpp
src/broadcasters/static_tf/: CMakeLists.txt  package.xml
src/broadcasters/static_tf/launch/: fifth_robot.launch  static_tf.launch
src/broadcasters/static_tf/src/: static_tf_node.cpp
src/fifth_robot_2dnav/: CMakeLists.txt  package.xml
src/fifth_robot_2dnav/costmap/: base_local_planner_params.yaml  costmap_common_params.yaml
src/fifth_robot_2dnav/launch/: amcl_diff.launch  move_base.launch  naviagtion_config.launch
src/fifth_robot_control/: package.xml
src/fifth_robot_control/config/: controller.yaml
src/fifth_robot_control/launch/: fifth_robot_control.launch
src/fifth_robot_description/: CMakeLists.txt  fifth_robot.urdf  install_simulator.sh  model.config  package.xml
src/fifth_robot_description/config/: controller.yaml  controller.yaml.back
src/fifth_robot_description/launch/: amcl_diff_gazebo.launch  fifth_robot_control.launch  fifth_robot_gazebo.launch  fifth_teleop  gazebo.launch  gazebo_map_serve.launch  gazebo_nav.launch  gazebo_teleop.launch  move_base_gazebo.launch  test.launch
src/fifth_robot_description/map/: gazebo_willowgarage.yaml
src/fifth_robot_description/urdf/: fifth_robot.urdf
src/fifth_robot_description/world/: fifth_robot.world
src/fifth_robot_driver/: CMakeLists.txt  package.xml
src/fifth_robot_gazebo/: package.xml
src/fifth_robot_gazebo/launch/: fifth_robot.launch  fifth_robot_world.launch
src/fifth_robot_gazebo/worlds/: fifth_robot.world
src/fifth_robot_launcher/: CMakeLists.txt  mapping.launch  package.xml
src/fifth_robot_launcher/fifth_robot_parameter/: fifth_robot_parameter.param
src/fifth_robot_launcher/launch/: mapServe.launch  navigation.launch  setup_robot.launch  static_tf.launch  teleop.launch  waypointMake.launch  waypointServe.launch  ypspur.launch
src/fifth_robot_launcher/rviz/: yamabico.rviz
src/fifth_robot_launcher/shell/: .openUSB.sh.swp  .recold.txt.swp  nav_rviz.txt  openEth.sh  openUSB.sh  recold.txt
src/fifth_robot_launcher/ypspur_params/: fifth_robot.param
src/fifth_robot_map/: CMakeLists.txt  package.xml
src/fifth_robot_map/map/: default.yaml  fifth_honban_osimizu20161106.bag.yaml  ohshimizu_park.yaml
src/fifth_robot_pkgs/fifth_robot_control/: CMakeLists.txt  package.xml
src/fifth_robot_pkgs/fifth_robot_gazebo/: CMakeLists.txt  package.xml
src/fifth_robot_pkgs/fifth_robot_gazebo/launch/: fifth_robot_world.launch
src/fifth_robot_pkgs/fifth_robot_launcher/: CMakeLists.txt  package.xml
src/fifth_robot_pkgs/fifth_robot_launcher/config/: razor_imu_9dof.yaml
src/fifth_robot_pkgs/fifth_robot_launcher/launch/: connect.launch  connecting_test.launch  lrf.launch  map_serve.launch  navigation.launch  setup_laser.launch  setup_laser_merge.launch  setup_robot.launch  setup_robot_barebone.launch  teleop.launch  teleop_barebone.launch  teleop_lrf_enabled.launch  test_navigation.launch  waypoint_serve.launch
src/fifth_robot_pkgs/fifth_robot_launcher/launch/generator/: generate_2dmap.launch  generate_3dmap.launch  generate_map.launch  generate_waypoint.launch  hector_mapping.launch
src/fifth_robot_pkgs/fifth_robot_launcher/launch/navigation/: map_tf_test.launch  navigation.launch  planner_test.launch
src/fifth_robot_pkgs/fifth_robot_launcher/launch/setup/: lrf.launch  setup_all.launch  setup_robot.launch  teleop.launch  ypspur.launch
src/fifth_robot_pkgs/fifth_robot_launcher/launch/setup/robot/: connect.launch
src/fifth_robot_pkgs/fifth_robot_launcher/launch/setup/sensor/: front_urg.launch  razor_imu_9dof.launch  rt_usb_9axisimu_driver.launch  tf_for_sensors.launch  urg_merger.launch  velodyne.launch
src/fifth_robot_pkgs/fifth_robot_launcher/launch/test/: planner_test.launch
src/fifth_robot_pkgs/fifth_robot_launcher/launch/topics/: bag_filter_2d.launch  bag_filter_3d.launch  bag_recorder.launch  pointcloud_to_laserscan.launch  pointcloud_to_pcd.launch
src/fifth_robot_pkgs/fifth_robot_launcher/rviz/: gazebo.rviz  tanaco.rviz  waypoint_generating.rviz  with_amcl.rviz  with_mcl_3dl.rviz
src/fifth_robot_pkgs/fifth_robot_launcher/shell/: openEth.sh  openUSB.sh  test_UTM_30_LX_EW.sh
src/fifth_robot_pkgs/fifth_robot_launcher/ypspur_params/: fifth_robot.param  fifth_robot_old.param
src/fifth_robot_pkgs/fifth_robot_pkgs/: CMakeLists.txt  package.xml
src/fifth_robot_simulator/: CMakeLists.txt  package.xml
src/fifth_robot_simulator/launch/: fifth_robot_simulator.launch
src/fifth_robot_simulator/urdf/: cirkit5.urdf
src/goal_sender/: CMakeLists.txt  package.xml
src/goal_sender/src/: csv_goal_sender_node.cpp  goal_sender_node.cpp
src/goal_sender/waypoint/: 2016-11-05-15-10-06.csv  2016-11-06-00-45-38.csv  default.csv  park.csv  waypoint_front.csv  waypoint_multi.csv
src/goal_sender_msgs/: CMakeLists.txt  package.xml
src/goal_sender_msgs/msg/: GoalSequence.msg  Waypoint.msg
src/goal_sender_msgs/srv/: ApplyGoals.srv  ApplyWaypoints.srv
src/radio_controller/joy_adapter/: CMakeLists.txt  package.xml
src/radio_controller/joy_adapter/src/: joy_adapter_node.cpp
src/teleop_master/: CMakeLists.txt  package.xml
src/teleop_master/config/: ps3.config.yaml
src/teleop_master/launch/: teleop_master.launch
src/teleop_master/src/: teleop_master_node.cpp
src/waypoints_reader/: CMakeLists.txt  package.xml
src/waypoints_reader/config/: waypoint.yaml  waypoints.yaml
src/waypoints_reader/scripts/: yaml_reader.py
src/yamlReader/: CMakeLists.txt  README.md  package.xml
src/yaml_reader/: CMakeLists.txt  README.md  package.xml
src/yaml_reader/scripts/: yaml_reader.py
src/yaml_reader/src/: example_waypoint.yaml  waypoint.yaml  yamlReader.py  yaml_reader.py
(+111 files in other folders)
