<?xml version="1.0"?>
<package format="2">
  <name>fifth_robot_description</name>
  <version>0.0.0</version>
  <description>The fifth_robot_description package</description>

  <maintainer email="p111026h@mail.kyutech.jp">yasu17</maintainer>

  <author email="cirkit.infomation@gmail.com">CIR-KIT</author>↲


  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>

</package>
