<?xml version="1.0"?>
<package version="2">
  <name>fifth_robot_gazebo</name>
  <version>0.0.0</version>
  <description>The fifth_robot_gazebo package</description>

  <maintainer email="p111026h@mail.kyutech.jp">yasu17</maintainer>


  <license>BSD</license>


  <author email="cirkit.information@gmail.com">Jane Doe</author>

  <depend>fifth_robot_control</depend>
  <depend>fifth_robot_description</depend>
  <depend>gazebo_plugins</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_ros_control</depend>
  <depend>xacro</depend>

  </export>
</package>
