<?xml version="1.0"?>
<package format="2">
  <name>fifth_robot_launcher</name>
  <version>0.1.0</version>
  <description>The fifth_robot_launcher package</description>

  <maintainer email="o111027y@mail.kyutech.jp">Doi Yusuke</maintainer>
  <license>BSD</license>
  <url type="website">http://cir-kit.github.io/</url>
  <author email="cirkit.infomation@gmail.com">CIR-kIT</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>fifth_robot_2dnav</depend>
  <depend>goal_sender</depend>
  <depend>map_server</depend>
  <depend>teleop_master</depend>
  <depend>tf</depend>
  <depend>urg_node</depend>
  <depend>ypspur_ros_bridge</depend>

  <export>
  </export>
</package>
