<?xml version="1.0"?>
<package>
  <name>fifth_robot_map</name>
  <version>0.1.0</version>
  <description>The fifth_robot_map package</description>

  <maintainer email="o111027y@mail.kyutech.jp">Doi Yusuke</maintainer>
  <license>BSD</license>
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <buildtool_depend>catkin</buildtool_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
