<?xml version="1.0"?>
<package format="2">
  <name>fifth_robot_simulator</name>
  <version>0.0.0</version>
  <description>ROS_gazebo_packeage_for_KITC5</description>

  <maintainer email="p111026h@mail.kyutech.jp">yasu80</maintainer>

  <license>free</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>gazebo_ros</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>

</package>
