<?xml version="1.0"?>
<package format="2">
  <name>goal_sender</name>
  <version>0.1.0</version>
  <description>The goal_sender package</description>

  <maintainer email="o111027y@mail.kyutech.jp">Doi Yusuke</maintainer>
  <maintainer email="p111026h@mail.kyutech.jp">yasu16</maintainer>

  <license>BSD</license>

  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>actionlib</depend>
  <depend>geometry_msgs</depend>
  <depend>move_base_msgs</depend>
  <depend>tf</depend>

  <export>
  </export>
</package>
