<?xml version="1.0"?>
<package format="2">
  <name>goal_sender_msgs</name>
  <version>0.1.0</version>
  <description>The goal_sender_msgs package</description>

  <maintainer email="o111027y@mail.kyutech.jp">Doi Yusuke</maintainer>

  <license>BSD</license>

  <url type="website">http://cir-kit.github.io/</url>
  <author email="cirkit.infomation@gmail.com">CIR-KIT</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <build_depend>message_generation</build_depend>
  <build_export_depend>message_generation</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
