<?xml version="1.0"?>
<package format="2">
  <name>waypoints_reader</name>
  <version>0.1.0</version>
  <description>The yamlReader package</description>

  <maintainer email="o111027y@mail.kyutech.jp">Doi Yusuke</maintainer>
  <maintainer email="p111026h@mail.kyutech.jp">yasu16</maintainer>
  <license>BSD</license>
  <url type="website">http://cir-kit.github.io/</url>
  <author email="cirkit.infomation@gmail.com">CIR-KIT</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>goal_sender_msgs</depend>
</package>
