<?xml version="1.0"?>
<package format="2">
  <name>yaml_reader</name>
  <version>0.1.0</version>
  <description>The yamlReader package</description>

  <maintainer email="p111026h@mail.kyutech.jp">yasu16</maintainer>
  <license>BSD</license>
  <url type="website">http://cir-kit.github.io/</url>
  <author email="cirkit.infomation@gmail.com">CIR-KIT</author>

  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>

  <export>
  </export>
</package>
