<?xml version="1.0"?>
<package format="2">
  <name>fifth_robot_control</name>
  <version>0.0.0</version>
  <description>The fifth_robot_control package</description>

  <maintainer email="p111026h@mail.kyutech.jp">yasu17</maintainer>


  <license>BSD-3</license>

  <author email="cirkit.information@gmail.com">Jane Doe</author>

<buildtool_depend>catkin</buildtool_depend>

  <exec_depend>control_msgs</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

</package>
