<?xml version="1.0"?>
<package format="2">
  <name>fifth_robot_gazebo</name>
  <version>0.0.0</version>
  <description>The fifth_robot_gazebo package</description>

  <maintainer email="p111026h@mail.kyutech.jp">yasu17</maintainer>


  <license>BSD</license>


  <author email="cirkit.information@gmail.com">Jane Doe</author>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>fifth_robot_control</exec_depend>
  <exec_depend>fifth_robot_description</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>xacro</exec_depend>

</package>
