<?xml version="1.0"?>
<package format="2">
  <name>joy_adapter</name>
  <version>0.1.0</version>
  <description>The joy_adapter package</description>

  <maintainer email="o111027y@mail.kyutech.jp">Doi Yusuke</maintainer>

  <license>BSD</license>

  <author email="o111027y@mail.kyutech.jp">Doi Yusuke</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>joy</depend>
  <depend>roscpp</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
